Fix spacing between header icons

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -5,6 +5,6 @@ h1 > a {
 .spacer {
 	flex: 1 1 auto;
 }
-.mat-mini-fab {
-	margin-right: 0.5rem;
+.mat-mdc-mini-fab {
+	margin-right: 0.8rem;
 }
